--- a/AestheticTerrain/AestheticTerrain/AestheticTerrain.csproj
+++ b/AestheticTerrain/AestheticTerrain/AestheticTerrain.csproj
@@ -25,4 +25,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="FileManipulation\" />
+  </ItemGroup>
+
 </Project>
